--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,6 +13,7 @@
 	@media @phone {
 		.main-header {
 			border-radius: 0.25rem;
+			width: 100%;
 		}
 	}
 	.space-images {
